# libflex

./: .gitignore  FLEX_FRAMING.md  Makefile.am  README.md  configure.ac  configure~  libflex.pc.in
.github/workflows/: release.yml
debian/: changelog  control  copyright  libflex-dev.install  libflex0.install
examples/: Makefile.am  decode_stream.c  decode_wav  decode_wav.c  encode_page.c  encode_wav  encode_wav.c  flex_sdr  flex_sdr.c  flex_tx  flex_tx.c  gen_baseband  gen_baseband.c  gen_samples  gen_samples.c  level_sweep.sh
include/: Makefile.am
include/libflex/: bch.h  biw.h  decoder.h  encoder.h  error.h  fiw.h  flex.h  modem.h  sync.h  types.h  version.h
src/: Makefile.am  alpha.c  bch.c  binary.c  biw.c  codeword.c  decoder.c  encoder.c  error.c  fiw.c  flex_internal.h  interleave.c  modem.c  numeric.c  phase.c  sync.c
tests/: Makefile.am  test_alpha.c  test_bch.c  test_binary.c  test_biw.c  test_codeword.c  test_decoder.c  test_encoder.c  test_fiw.c  test_interleave.c  test_main.c  test_modem.c  test_numeric.c  test_phase.c  test_roundtrip.c  test_sync.c
